--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,3 @@
 title: QLiMBer Blog
 description: My notes on various topics
-theme: hacker
-
-remote_theme: pages-themes/hacker@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+theme: minimal-mistakes
