--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 title: QLiMBer Blog
 description: My notes on various topics
-theme: midnight
+remote_theme: pages-themes/midnight@v0.2.0
+plugins:
+  - jekyll-remote-theme
