--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
 title: QLiMBer Blog
 description: My notes on various topics
-remote_theme: pages-themes/midnight@v0.2.0
-plugins:
-  - jekyll-remote-theme
+theme: jekyll-theme-midnight
