feat: add GA consent flow and privacy updates
  - add custom layouts/includes for GA4 consent banner with IP anonymisation
  - surface post titles, publish privacy policy, and wire nav entry
  - document dev workflow and analytics setup; ignore build artefacts

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 # Cursor IDE
 .cursor/
+
+# Jekyll build artifacts
+_site/
+.jekyll-cache/
+.jekyll-metadata
+.sass-cache/
+
+# Bundler install path
+vendor/
+.bundle/
